--- a/index.html
+++ b/index.html
@@ -5,10 +5,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kafka On The Shore</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 
 <body>
+    <nav class="navbar">
+        <div class="container">
+            <div class="logo">Kafka On The Shore</div>
+            <ul class="nav">
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <header class="header">
+        <div class="container">
+            <div>
+                <h1>Kafka On The Shore Bookstore</h1>
+                <p>
+                    "Books are a uniquely portable magic." - Stephen King, On Writing: A Memoir of the Craft
+                </p>
+            </div>
+            <img src="./image/kafka.jpg" alt="Kafka" height="300" width="400">
+        </div>
+    </header>
 
+    <section class="boxes">
+        <div class="container">
+            <div class="box">
+                <h2>Hmmmmmmm</h2>
+                <p>I dont know</p>
+            </div>
+
+            <div class="box">
+                <h2>Hmmmmmmm</h2>
+                <p>I dont know</p>
+            </div>
+
+            <div class="box">
+                <h2>Hmmmmmmm</h2>
+                <p>I dont know</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
