Added Content and Styling
Added quotes to the individual boxes. Centered the text within each box.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div>
                 <h1>Kafka On The Shore Bookstore</h1>
                 <p>
-                    "Books are a uniquely portable magic." - Stephen King, On Writing: A Memoir of the Craft
+                    "The repitition itself becomes the important thing" - Haruki Murakami
                 </p>
             </div>
             <img src="./image/kafka.jpg" alt="Kafka" height="300" width="400">
@@ -41,18 +41,15 @@
     <section class="boxes">
         <div class="container">
             <div class="box">
-                <h2>Hmmmmmmm</h2>
-                <p>I dont know</p>
+                <p>"In dreams begin responsibilities"</p>
             </div>
 
             <div class="box">
-                <h2>Hmmmmmmm</h2>
-                <p>I dont know</p>
+                <p>"You can't look too far ahead. Do that and you'll lose sight of what you're doing and stumble."</p>
             </div>
 
             <div class="box">
-                <h2>Hmmmmmmm</h2>
-                <p>I dont know</p>
+                <p>"As long as you have the courage to admit mistakes, things can be turned around."</p>
             </div>
         </div>
     </section>
